RanjitaDhruv/src/objects/X3Cun__c.object
<CustomObject>
    <fields>
        <fullName>Box_Size__c</fullName>
        <label>Box Size</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Small</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Large</fullName>
                </value>
                <value>
                    <fullName>Extra Large</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GiftBox_Color__c</fullName>
        <label>GiftBox Color</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Blue</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_rep__c</fullName>
        <label>Sales rep</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>3Cube</label>
    <nameField>
        <label>3 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>3Cubes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>